force-app/main/default/objects/Tournament_Registration__c/Tournament_Registration__c.object-meta.xml
<CustomObject>
    <label>Tournament Registration</label>
    <pluralLabel>Tournament Registrations</pluralLabel>
    <nameField>
        <label>Registration Name</label>
        <type>AutoNumber</type>
        <displayFormat>TR-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Tracks which players joined which tournaments.</description>
</CustomObject>