force-app/main/default/objects/Tournament_Registration__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Tournament Registrations</relationshipLabel>
    <relationshipName>Tournament_Registrations</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>