force-app/main/default/objects/Tournament_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Registered</fullName><default>true</default><label>Registered</label></value>
            <value><fullName>Eliminated</fullName><default>false</default><label>Eliminated</label></value>
            <value><fullName>Winner</fullName><default>false</default><label>Winner</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>